--- a/source/_includes/contact.html
+++ b/source/_includes/contact.html
@@ -1,4 +1,4 @@
-<a href="mailto:{{ site.author.email }}">&#x2709;</a>
+<a href="mailto:{{ site.author.email }}" title="{{ site.author.email }}" alt="{{ site.author.email }}" target="_blank"><i class="icon icon-google-mail"></i></a>
 <a href="{{ site.author.gplus }}" title="{{ site.author.gplus }}" alt="{{ site.author.gplus }}" target="_blank"><i class="icon icon-google-plus"></i></a>
 <a href="{{ site.author.facebook }}" title="{{ site.author.faceboo'k }}" alt="{{ site.author.facebook }}" target="_blank"><i class="icon icon-facebook"></i></a>
 <a href="{{ site.author.twitter }}" title="{{ site.author.twitter }}" alt="{{ site.author.twitter }}" target="_blank"><i class="icon icon-twitter"></i></a>
