--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -13,7 +13,7 @@
         {% for item in site.navbar %}
           <li><a href="{{ '/' | prepend: site.baseurl }}{{ item.slug }}" title="{{ item.title }}">{{ item.title }}</a></li>
         {% endfor %}
-        <li><a href="{{ site.baseurl }}/resume/curriculum-en.pdf" title="Download Curriculum English" download>Download CV</a></li>
+        <!-- <li><a href="{{ site.baseurl }}/resume/curriculum-en.pdf" title="Download Curriculum English" download>Download CV</a></li> -->
         <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}" target="_blank"><i class="icon icon-feed"></i></a></li>
       </ul>
     </nav>
