--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -4,6 +4,9 @@
   {% include head.html %}
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.google_analytics_container }}"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   {{ content }}
   {% include github-corner.html %}
 </body>
