added some resume informations

--- a/source/_sass/end2end/_syntax.sass
+++ b/source/_sass/end2end/_syntax.sass
@@ -24,11 +24,11 @@
       color: #eeffdd
 
     code
-      white-space: pre
+      white-space: pre-wrap
       padding: 0 !important
 
       *
-        white-space: nowrap
+        white-space: pre-wrap
 
         // this sets all children inside to nowrap
 
