adicionado skills o currículo 'imprimível'

--- a/source/_includes/header.print.html
+++ b/source/_includes/header.print.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<section class="site-header">
   <h1 class="logo">{{ site.author.name }}</h1>
   <nav class="txt-right">
     <h6>Curitiba- Paraná - Brazil</h6>
@@ -6,4 +6,4 @@
     <h6><a href="mailto:{{ site.author.email }}" title="Personal mail" target="_blank"><i class="icon icon-mail"></i>
         {{ site.author.email }}</a></h6>
   </nav>
-</header>
+</section>
