--- a/source/_layouts/graduation-print.html
+++ b/source/_layouts/graduation-print.html
@@ -3,5 +3,5 @@
   {{ site.messages[lang].print-resume.title.institution }}:
   <strong>{{ page.institution }}</strong>
   <time datetime="{{ page.startdate }}">{{ page.startdate  | date: "%b, %Y"}}</time>- <time datetime="{{ page.enddate }}">{{ page.enddate  | date: "%B, %Y"}}</time>
-  <p>Course: {{ page[lang].name }}</p>
+  <p>Course: <strong>{{ page[lang].name }}</strong></p>
 </div>
