--- a/source/_layouts/print.html
+++ b/source/_layouts/print.html
@@ -8,11 +8,15 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.google_analytics_container }}"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   {% assign lang = page.lang | default: "en-us" %}
-  {% include header.print.html %}
-  {{ content }}
+  <main class="main-container">
+    <article role="article" class="page card">
+      {% include header.print.html %}
+      {{ content }}
+    </article>
+  </main>
   <script>
-    //alert('{{ site.messages[lang].print }}');
-    //print();
+    // alert('{{ site.messages[lang].print }}');
+    // print();
   </script>
 </body>
 </html>
