--- a/source/_sass/end2end/_base.print.sass
+++ b/source/_sass/end2end/_base.print.sass
@@ -20,4 +20,12 @@ body
     text-transform: capitalize
 
 .main-container
-  padding-top: 6.5em
+  // padding-top: 5.5em
+
+.card
+  page-break-inside: avoid
+
+progress
+  color: $primary-color
+  box-shadow: -1px 2px 6px 0 rgba($black-color, .1)
+  border-radius: $small-border-radius
