atualizado link IF Campaign

--- a/source/_includes/social.html
+++ b/source/_includes/social.html
@@ -10,4 +10,4 @@
   <li><a href="{{ site.author.whatsapp }}" title="Send me an whatsapp" target="_blank"><i class="icon icon-whatsapp"></i></a></li>
   <li><a href="tel:{{ site.author.phone }}" title="Call me" target="_blank"><i class="icon icon-phone"></i></a></li>
 </ul>
-<a href="//cirillocompany.de/pages/anti-if"><img height="60" width="120" src="//cdn.shopify.com/s/files/1/0257/1675/t/147/assets/banner_ive-joined.gif" alt="I have joined Anti-IF Campaign"></a>
+<a href="//francescocirillo.com/pages/anti-if-campaign"><img height="60" width="120" src="//cdn.shopify.com/s/files/1/0257/1675/t/147/assets/banner_ive-joined.gif" alt="I have joined Anti-IF Campaign"></a>
