--- a/source/_layouts/skills.html
+++ b/source/_layouts/skills.html
@@ -1,3 +1,4 @@
-<label for="{{ page.skill }}Progress">{{ page.skill }}</label>
-<progress value="{{ page.percent }}" max="100" id="{{ page.skill }}Progress"></progress>
-
+<small>
+    <label for="{{ page.skill }}Progress">{{ page.skill }}</label>
+    <progress value="{{ page.percent }}" max="100" id="{{ page.skill }}Progress"></progress>
+</small>
