--- a/source/_includes/head.print.html
+++ b/source/_includes/head.print.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Cache-Control" content="only-if-cached"/>
 <meta http-equiv="Cache-Control" content="max-age=120"/>
 
-<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+<title>Resume - {{ site.author.name }}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
 <link rel="stylesheet" href="{{ '/css/print.css' | prepend: site.baseurl }}">
