--- a/source/_layouts/pagesprint.html
+++ b/source/_layouts/pagesprint.html
@@ -2,10 +2,12 @@
 layout: print
 ---
 
-<table class="no-border">
-  <tr><td rowspan="5" width="20%">{% include print/skills.md %}</td></tr>
-  <tr><td><article role="article" class="page card">{% include print/goal.md %}</article></td></tr>
-  <tr><td><article role="article" class="page card">{% include print/graduation.md %}</article></td></tr>
-  <tr><td><article role="article" class="page card">{% include print/experiences.md %}</article></td></tr>
-  <tr><td><article role="article" class="page card">{% include print/courses.md %}</article></td></tr>
-</table>
+<section class="main-container">
+  <article role="article" class="page card" style="float: right;">{% include print/skills.md %}</article>
+  <article role="article" class="page card">{% include print/goal.md %}</article>
+  <article role="article" class="page card">{% include print/graduation.md %}</article>
+</section>
+<section>
+  <article role="article" class="page card">{% include print/experiences.md %}</article>
+  <article role="article" class="page card">{% include print/courses.md %}</article>
+</section>
