ajustado skill e adicionado arquivos de skills

--- a/source/_layouts/pagesprint.html
+++ b/source/_layouts/pagesprint.html
@@ -3,7 +3,7 @@ layout: print
 ---
 
 <section class="main-container">
-  <article role="article" class="page card" style="float: right;">{% include print/skills.md %}</article>
+  <article role="article" class="main-container page card" style="float: right;">{% include print/skills.md %}</article>
   <article role="article" class="page card">{% include print/goal.md %}</article>
   <article role="article" class="page card">{% include print/graduation.md %}</article>
 </section>
