--- a/source/_layouts/skills.html
+++ b/source/_layouts/skills.html
@@ -1,4 +1,4 @@
-<small>
+<small class="print-skill">
     <label for="{{ page.skill }}Progress">{{ page.skill }}</label>
     <progress value="{{ page.percent }}" max="100" id="{{ page.skill }}Progress"></progress>
 </small>
