--- a/source/_sass/end2end/_base.print.sass
+++ b/source/_sass/end2end/_base.print.sass
@@ -49,3 +49,9 @@ p
   margin: 0 0 .5em
   &:last-child
     margin: 0 0 .5em
+
+.print-skill
+  font-size: 50% !important
+
+  label
+    margin-bottom: 0
