--- a/source/_sass/end2end/_base.print.sass
+++ b/source/_sass/end2end/_base.print.sass
@@ -24,10 +24,8 @@ body
 
 .card
   // page-break-inside: avoid
-  // padding: 0.1em 1.5em
+  padding: 0.1em 1.5em
 
-  &:not(:last-child)
-    // margin: 0 0 .3em
 
 th
   border-bottom: 0px
