ajustado página web do currículo

--- a/source/_layouts/print.html
+++ b/source/_layouts/print.html
@@ -11,9 +11,11 @@
 
   {% include header.print.html %}
   {{ content }}
+  {% if site.host != "127.0.0.1" %}
   <script>
-    // alert('{{ site.messages[lang].print-alert }}');
-    // print();
+    alert('{{ site.messages[lang].print-alert }}');
+    print();
   </script>
+{% endif %}
 </body>
 </html>
