Comprimido HTML ajuste da coluna Skills e página de Skills

--- a/source/_includes/header.print.html
+++ b/source/_includes/header.print.html
@@ -1,6 +1,4 @@
-{% assign lang = page.lang | default: "en-us" %}
-
-<small>
+{% assign lang = page.lang | default: "en-us" %}<small>
   <article role="article" class="page card">
     <table>
       <tr><th rowspan="4"><h1>{{ site.author.name }}</h1></th></tr>
