--- a/source/_layouts/skills.html
+++ b/source/_layouts/skills.html
@@ -1,4 +1,2 @@
-<small class="print-skill">
-    <label for="{{ page.skill }}Progress">{{ page.skill }}</label>
-    <progress value="{{ page.percent }}" max="100" id="{{ page.skill }}Progress" style="max-width: 100px"></progress>
-</small>
+<label>{{ page.en-us.skill }}</label>
+<progress value="{{ page.percent }}" max="100"></progress>
