update jekyll version, skills little modification

--- a/source/_layouts/skills.html
+++ b/source/_layouts/skills.html
@@ -1,2 +1,2 @@
-<label>{{ page.en-us.skill }}</label>
+<label>{{ page.en-us.skill }} {{ page.en-us.extra }}</label>
 <progress value="{{ page.percent }}" max="100"></progress>
