--- a/source/_includes/print/experiences.html
+++ b/source/_includes/print/experiences.html
@@ -2,15 +2,16 @@
 
 <h2>{{ site.messages[lang].print-resume.title.experiences }}</h2>
 
-{% assign list = site.experiences | reverse %}
+{% assign list = site.experiences | sort: 'admissiondate' %}
+{% assign list = list | reverse%}
 {% for i in (0..site.max_experiences) %}
 <div class="page">
   <em>{{ list[i][lang].jobtitle }}</em> &mdash; <strong>{{ list[i].company }}</strong> &mdash;
   <time datetime="{{ list[i].admissiondate }}">{{ list[i].admissiondate | date: "%Y" }}</time> &dash;
   {% if list[i].resignationdate %}
-    <time datetime="{{ list[i].resignationdate }}">{{ list[i].resignationdate | date: "%Y" }}</time>
+  <time datetime="{{ list[i].resignationdate }}">{{ list[i].resignationdate | date: "%Y" }}</time>
   {% else %}
-    {{ site.messages[lang].print-resume.title.current }}
+  {{ site.messages[lang].print-resume.title.current }}
   {% endif %}
   <br />{{ list[i][lang].description }}
   <br />{{ list[i].languages | join: ', ' }}
