--- a/source/_layouts/pagesprint.html
+++ b/source/_layouts/pagesprint.html
@@ -7,6 +7,6 @@ layout: print
   <article role="article" class="page card">{% include print/graduation.md %}</article>
 </section>
 <section>
-  <article role="article" class="page card">{% include print/experiences.md %}</article>
+  <article role="article" class="page card">{% include print/experiences.html %}</article>
   <article role="article" class="page card">{% include print/courses.md %}</article>
 </section>
