print directly on loading print page

--- a/source/_layouts/print.html
+++ b/source/_layouts/print.html
@@ -10,9 +10,9 @@ layout: compress
   <!-- End Google Tag Manager (noscript) -->
   {% include header.print.html %}
   {{ content }}
-  {% if jekyll.environment != "development" %}<script>
+  <script>
     alert('{{ site.messages[lang].print-alert }}');
     print();
-  </script>{% endif %}
+  </script>
 </body>
 </html>
