--- a/source/_includes/head.print.html
+++ b/source/_includes/head.print.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Cache-Control" content="only-if-cached"/>
 <meta http-equiv="Cache-Control" content="max-age=120"/>
-<title>Resume - {{ site.author.name }}</title>
+<title>{{ site.messages[lang].page-title }} - {{ site.author.name }}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 <link rel="stylesheet" href="{{ '/css/print.css' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
