--- a/source/_sass/_mixins.sass
+++ b/source/_sass/_mixins.sass
@@ -21,3 +21,13 @@
 
     @media #{$media-query}
       @content
+
+@mixin word-wrap()
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
