--- a/source/_sass/_variables.sass
+++ b/source/_sass/_variables.sass
@@ -1,5 +1,5 @@
 // Typography
-$base-font-family: "Montserrat", $helvetica
+$base-font-family: "Montserrat", $font-stack-helvetica
 $heading-font-family: $base-font-family
 
 // Font Sizes
