--- a/source/_includes/contact/form.html
+++ b/source/_includes/contact/form.html
@@ -1,5 +1,5 @@
 <form id="contact" method="POST" action="https://formsubmit.co/matheus.costa.vieira@gmail.com">
-    <input type="hidden" name="_next" value="{{ '/contact/thanks/' | prepend: site.url }}" />
+    <input type="hidden" name="_next" value="https://matheus-vieira.github.io/contact/thanks" />
     <input type="hidden" name="_language" value="en-US" />
     <input type="email" name="email" placeholder="Your email" required />
     <input type="text" name="_subject" placeholder="Type a subject!" required />
