--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,17 +1,29 @@
 <header class="site-header">
   <div class="container">
     <input type="checkbox" id="toggleNavbar">
-    <h1 class="logo"><a href="{{ '/'' | prepend: site.baseurl }}" alt="{{ site.author.name }}" title="{{ site.author.name }}">{{ site.author.name }}</a></h1>
-    <label for="toggleNavbar" role="button" class="toggle-navbar-button">
+    <h1 class="logo">
+      <a href="{{ '/' | prepend: site.baseurl }}" alt="{{ site.author.name }}" title="{{ site.author.name }}">
+        {{ site.author.name }}
+      </a>
+    </h1>
+    <label for="toggleNavbar" role="button" class="toggle-navbar-button" aria-label="Toggle menu button">
       <i class="icon icon-menu"></i>
       <i class="icon icon-cross"></i>
     </label>
     <nav class="navbar">
       <ul>
         {% for item in site.navbar %}
-          <li><a href="{{ '/' | prepend: site.baseurl }}{{ item.slug }}" title="{{ item.title }}">{{ item.title }}</a></li>
+          <li>
+            <a href="{{ '/' | prepend: site.baseurl }}{{ item.slug }}" title="{{ item.title }}">
+              {{ item.title }}
+            </a>
+          </li>
         {% endfor %}
-        <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}" target="_blank"><i class="icon icon-rss"></i></a></li>
+        <li>
+          <a href="{{ '/feed.xml' | prepend: site.baseurl }}" target="_blank">
+            <i class="icon icon-rss"></i>
+          </a>
+        </li>
       </ul>
     </nav>
   </div>
