--- a/source/_includes/pagination.html
+++ b/source/_includes/pagination.html
@@ -1,5 +1,5 @@
 {% if paginator.total_pages > 1 %}
-<nav class="pagination" role="pagination">
+<nav class="pagination" role="navigation">
   <ul>
     {% assign url = site.baseurl | append: "/blog/" %}
     {% if paginator.previous_page %}
