--- a/source/_includes/social.html
+++ b/source/_includes/social.html
@@ -7,4 +7,4 @@
   <li><a href="{{ site.author.whatsapp }}" title="Send me an whatsapp" target="_blank"><i class="icon icon-whatsapp"></i></a></li>
   <li><a href="tel:{{ site.author.phone }}" title="Call me" target="_blank"><i class="icon icon-phone"></i></a></li>
 </ul>
-<a href="//francescocirillo.com/pages/anti-if-campaign"><img height="60" width="120" src="https://cdn.shopify.com/s/files/1/0257/1675/t/152/assets/banner_ive-joined.gif?15726816304428688971" alt="I have joined Anti-IF Campaign"></a>
+<a href="https://francescocirillo.com/products/the-anti-if-campaign"><img height="60" width="120" src="https://cdn.shopify.com/s/files/1/0257/1675/t/152/assets/banner_ive-joined.gif?15726816304428688971" alt="I have joined Anti-IF Campaign"></a>
