--- a/source/_sass/end2end/_github-corner.sass
+++ b/source/_sass/end2end/_github-corner.sass
@@ -7,6 +7,18 @@
   +media($tablet-small)
     display: block
 
+.github-corner
+  svg
+    fill: $primary-color
+    color: $white-color
+    position: absolute
+    top: 0
+    border: 0
+    right: 0
+
+    path.octo-arm
+      transform-origin: 130px 106px
+
 @keyframes octocat-wave
   0%,100%
     transform: rotate(0)
