update jekyll dependencies, resume and skills info

--- a/source/_layouts/graduation.html
+++ b/source/_layouts/graduation.html
@@ -1,4 +1,4 @@
-{% assign lang = page.lang | default: "en-us" %}
+{% assign lang = page.lang | default: en-us %}
 <div class="well well-sm">
 	<h3>Institution: <strong>{{ page.institution }}</strong></h3>
 	<span>Graduation type: <strong>{{ page.type }}</strong></span><br />
