--- a/source/_layouts/js.html
+++ b/source/_layouts/js.html
@@ -5,8 +5,9 @@ request({{ page.url | replace: 'html', 'json' | jsonify }});
 {
   "name": {{ page.company | jsonify }},
   "admissionDate": {{ page.admissiondate | date: dateFormat | jsonify }},
-  "resignationdate": {% assign resignationdate = page.resignationdate | date: dateFormat %}{% if resignationdate == 'Actual' %}{{ resignationdate | jsonify }}{% else %}{{ resignationdate | date: dateFormat  | jsonify}}{% endif %},
-  "atributions": {{ content | strip | jsonify | replace: "<p>", "" | replace: "</p>", ""| replace: "\n", "" }},
+  "resignationDate": {% assign resignationdate = page.resignationdate | date: dateFormat %}{% if resignationdate == 'Actual' %}{{ resignationdate | jsonify }}{% else %}{{ resignationdate | date: dateFormat  | jsonify}}{% endif %},
+  "jobTitle": {{ page.jobtitle | jsonify }},
+  "attributions": {{ content | strip | jsonify | replace: "<p>", "" | replace: "</p>", ""| replace: "\n", "" }},
   "languages": {{ page.languages | jsonify }},
   "frameworks": {{ page.frameworks | jsonify }}{% if page.additionInfo != '' %},
   "additionInfo": {{ page.additionInfo | jsonify }}{% endif %}
