--- a/source/_includes/header.print.html
+++ b/source/_includes/header.print.html
@@ -1,7 +1,7 @@
 {% assign lang = page.lang | default: "en-us" %}<small>
   <article role="article" class="page card">
     <table>
-      <tr><th rowspan="4"><h1>{{ site.author.name }}</h1></th></tr>
+      <tr><th rowspan="4"><h1>{{ site.author.full-name }}</h1></th></tr>
       <tr><th class="txt-right">{{ site.messages[lang].print-resume.location }}</th></tr>
       <tr><th class="txt-right"><a href="tel:{{ site.author.phone }}" title="Call me" target="_blank"><i class="icon icon-phone"></i> {{ site.author.cellphone }}</a></th></tr>
       <tr><th class="txt-right"><a href="mailto:{{ site.author.email }}" title="Personal mail" target="_blank"><i class="icon icon-mail"></i> {{ site.author.email }}</a></th></tr>
