--- a/source/_layouts/pagesprint.html
+++ b/source/_layouts/pagesprint.html
@@ -2,11 +2,16 @@
 layout: print
 ---
 <section class="main-container">
-  <article role="article" class="main-container page card" style="float: right;">{% include print/skills.md %}</article>
+  <!-- <article role="article" class="main-container page card" style="float: right;">{% include print/skills.md %}</article> -->
   <article role="article" class="page card">{% include print/goal.md %}</article>
-  <article role="article" class="page card">{% include print/graduation.md %}</article>
+  <article role="article" class="page card">{% include print/core-competencies.html %}</article>
 </section>
 <section>
   <article role="article" class="page card">{% include print/experiences.html %}</article>
+  <article role="article" class="page card">{% include print/graduation.md %}</article>
   <article role="article" class="page card">{% include print/courses.md %}</article>
+</section>
+<section>
+  <article role="article" class="page card"></article>
+  <article role="article" class="page card">{% include print/professional-goals.md %}</article>
 </section>
