--- a/source/_sass/end2end/_base.print.sass
+++ b/source/_sass/end2end/_base.print.sass
@@ -24,7 +24,10 @@ body
 
 .card
   // page-break-inside: avoid
-  padding: 0.1em 1.5em
+  padding: 0.1em 0.5em
+
+  &:not(:last-child)
+    margin: 0 0 $xsmall-spacing
 
 
 th
