--- a/source/_sass/end2end/_header.sass
+++ b/source/_sass/end2end/_header.sass
@@ -34,7 +34,7 @@
   padding: 0
   float: left
   font-weight: $font-weight-normal
-  font-size: rem(20)
+  font-size: $base-font-size * 2
   +position(fixed, $base-spacing null null $base-spacing)
   z-index: 100
 
