adjusted resume layout rewrite experiences

--- a/source/_includes/print/experiences.html
+++ b/source/_includes/print/experiences.html
@@ -2,20 +2,33 @@
 
 <h2>{{ site.messages[lang].print-resume.title.experiences }}</h2>
 
-{% assign list = site.experiences | sort: 'admissiondate' %}
-{% assign list = list | reverse%}
+{% assign sorted = site.experiences | sort: 'resignationdate' | reverse %}
+{% assign end2end = sorted | where_exp: "item", "item.company contains 'End2End'" | first %}
+{% assign other_experiences = sorted | reject: "company", "End2End Systems" %}
+
+{% assign list = "" | split: "" %}
+{% if end2end %}
+  {% assign list = list | push: end2end %}
+{% endif %}
+{% assign list = list | concat: other_experiences %}
+
 {% for i in (0..site.max_experiences) %}
-<div class="page">
-  <strong>{{ list[i].company }}</strong> &mdash; <em>{{ list[i][lang].jobtitle }}</em>
-  <br /><time datetime="{{ list[i].admissiondate }}">{{ list[i].admissiondate | date: "%Y" }}</time> &dash;
-  {% if list[i].resignationdate %}
-  <time datetime="{{ list[i].resignationdate }}">{{ list[i].resignationdate | date: "%Y" }}</time>
-  {% else %}
-  {{ site.messages[lang].print-resume.title.current }}
+  {% if list[i] %}
+  <div class="page">
+    <strong>
+      <em>
+        {{ list[i][lang].jobtitle }}
+      </em>
+    </strong> &mdash; {{ list[i].company }} &mdash; <time datetime="{{ list[i].admissiondate }}">{{ list[i].admissiondate | date: "%Y" }}</time> &dash;
+    {% if list[i].resignationdate %}
+    <time datetime="{{ list[i].resignationdate }}">{{ list[i].resignationdate | date: "%Y" }}</time>
+    {% else %}
+    {{ site.messages[lang].print-resume.title.current }}
+    {% endif %}
+    <br />{{ list[i][lang].description }}
+    <!-- <br />{{ list[i].languages | join: ', ' }}
+    <br />{{ list[i].frameworks | join: ', ' }}
+    <p>{{ list[i].additionInfo | join: ', ' }}</p> -->
+  </div>
   {% endif %}
-  <br />{{ list[i][lang].description }}
-  <!-- <br />{{ list[i].languages | join: ', ' }}
-  <br />{{ list[i].frameworks | join: ', ' }}
-  <p>{{ list[i].additionInfo | join: ', ' }}</p> -->
-</div>
 {% endfor %}
