--- a/source/_layouts/js.html
+++ b/source/_layouts/js.html
@@ -7,9 +7,13 @@ request({{ page.url | replace: 'html', 'json' | jsonify }});
   "admissionDate": {{ page.admissiondate | date: dateFormat | jsonify }},
   "resignationDate": {% assign resignationdate = page.resignationdate | date: dateFormat %}{% if resignationdate == 'Actual' %}{{ resignationdate | jsonify }}{% else %}{{ resignationdate | date: dateFormat  | jsonify}}{% endif %},
   "jobTitle": {{ page.jobtitle | jsonify }},
-  "attributions": {{ content | strip | jsonify | replace: "<p>", "" | replace: "</p>", ""| replace: "\n", "" }},
   "languages": {{ page.languages | jsonify }},
   "frameworks": {{ page.frameworks | jsonify }}{% if page.additionInfo != '' %},
   "additionInfo": {{ page.additionInfo | jsonify }}{% endif %}
 }
 {% endhighlight %}
+
+
+{{ content }}
+
+---
