removed unused code, which affect layout, more layout updates

--- a/source/_includes/header.print.html
+++ b/source/_includes/header.print.html
@@ -1,4 +1,5 @@
-{% assign lang = page.lang | default: "en-us" %}<small>
+{% assign lang = page.lang | default: "en-us" %}
+<small>
   <article role="article" class="page card">
     <table>
       <tr><th rowspan="5"><h1>{{ site.author.full-name }}</h1></th></tr>
