--- a/source/_layouts/print.html
+++ b/source/_layouts/print.html
@@ -11,8 +11,8 @@ layout: compress
   {% include header.print.html %}
   {{ content }}
   <script>
-    // alert('{{ site.messages[lang].print-alert }}');
-    // print();
+    alert('{{ site.messages[lang].print-alert }}');
+    print();
   </script>
 </body>
 </html>
