--- a/source/_sass/end2end/_base.print.sass
+++ b/source/_sass/end2end/_base.print.sass
@@ -20,7 +20,7 @@ body
     text-transform: capitalize
 
 .main-container
-  // padding-top: 5.5em
+  padding: 0.5em
 
 .card
   // page-break-inside: avoid
