--- a/source/_layouts/graduation.html
+++ b/source/_layouts/graduation.html
@@ -1,8 +1,7 @@
-{% assign lang = page.lang | default: en-us %}
 <div class="well well-sm">
 	<h3>Institution: <strong>{{ page.institution }}</strong></h3>
 	<span>Graduation type: <strong>{{ page.type }}</strong></span><br />
-	<span>Course: {{ page[lang].name }}</span><br />
+	<span>Course: {{ page.course }}</span><br />
 	<span><strong>{{ page.startdate  | date: "%B, %Y"}}</strong> - <strong>{{ page.enddate | date: "%B, %Y" }}</strong></span><br />
 	{{ content }}
 	{% comment %}
